feat(cart): integrate cart with product catalog